--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,9 @@
-registry:
-registry_user:
-registry_pass:
+registry: ""
+registry_user: ""
+registry_pass: ""
 
-service_name: placeholder
-image: alpine
+service_name:
+image:
 docker_run_args:
 
 volumes: []
