--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,7 @@
 ---
 galaxy_info:
+  role_name: docker_systemd_service
+  namespace: dblencowe
   author: Dave Blencowe (@dblencowe)
   description: Deploys a Docker container managed by systemd.
 
