chore: update playbook to match production linting rules

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: 🔍 Run Ansible Lint
         run: |
-          ansible-lint .
+          ansible-lint -c ./.ansible-lint.yml .
